# coreerp

./: .gitignore  BUILD-REPORT.md  HOW-TO-RUN.md  MANIFEST.in  MIGRATE-OFF-ERPNEXT.md  NEW-APP-PLAYBOOK.md  README.md  SETUP.md  TECH-DEBT.md  VALIDATION-CHECKLIST.md  _scaffold.py  _validate.py  license.txt  pyproject.toml
coreerp/: hooks.py  modules.txt  patches.txt
coreerp/api/: jinja.py  platform.py
coreerp/common/doctype/brand/: brand.json  brand.py
coreerp/common/doctype/terms_and_conditions/: terms_and_conditions.json  terms_and_conditions.py
coreerp/common/doctype/territory/: territory.json  territory.py
coreerp/common/doctype/uom/: uom.json  uom.py
coreerp/common/doctype/uom_conversion_factor/: uom_conversion_factor.json  uom_conversion_factor.py
coreerp/core/doctype/coreerp_settings/: coreerp_settings.json
coreerp/core/workspace/coreerp/: coreerp.json
coreerp/docs/: RBAC-guide.md  app-loading-flow.md  architecture.md  dependency-map.md  doctype-classification.md  hooks-explanation.md  how-to-create-new-module.md  migration-guide.md  plugin-development-guide.md  portal-system-guide.md
coreerp/engagement/doctype/campaign/: campaign.json  campaign.py
coreerp/organization/: tenant.py
coreerp/patches/v0_1/: create_default_organization.py  create_default_roles.py  setup_portal_defaults.py
coreerp/platform/: extensions.py
coreerp/public/css/: coreerp.bundle.css
coreerp/setup/: boot.py  install.py  notifications.py  setup_wizard.py
coreerp/tests/: smoke.py
docs/guides/: MIGRATE-OFF-ERPNEXT.md  SETUP.md
scripts/: scaffold.py  validate.py
(+61 files in other folders)
