[project]
name = "coreerp"
authors = [
    { name = "CoreERP Contributors", email = "dev@coreerp.local" }
]
description = "ERP Foundation Framework — a reusable, industry-agnostic business platform on Frappe (no manufacturing/stock/accounting assumptions)"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # Pure platform layer — no heavy ERP/manufacturing libs by design.
    # All runtime needs are provided by the Frappe framework itself.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "RUF"]
ignore = [
    "B017", "B018", "B023", "B904",
    "E101", "E402", "E501", "E741",
    "F401", "F403", "F405", "F722",
    "W191", "RUF001",
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[project.urls]
Homepage = "https://github.com/your-org/coreerp"
Repository = "https://github.com/your-org/coreerp.git"
"Bug Reports" = "https://github.com/your-org/coreerp/issues"
